--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "starter_kit",
   "version": "0.2.0",
+  "homepage": " https://michaelhdesigns.github.io/truffle-web3-nft-marketplace/",
   "private": false,
   "dependencies": {
     "@babel/preset-react": "^7.16.7",
@@ -15,6 +16,7 @@
     "chai": "^4.3.6",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.4",
+    "gh-pages": "^2.1.1",
     "hardhat": "^2.8.4",
     "ipfs-http-client": "^56.0.1",
     "react": "^17.0.2",
