--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
       "sizes": "512x512"
     }
   ],
-  "start_url": "https://michaelh.biz",
+  "start_url": "https://michaelhdesigns.github.io/nft_marketplace/",
   "display": "standalone",
   "theme_color": "#000000",
   "background_color": "#ffffff"
